--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,10 @@
     "angular-jwt": "~0.0.9",
     "angular-messages": "~1.5.0",
     "angular-aria": "~1.5.0",
-    "angular-material": "~1.0.6"
+    "angular-material": "~1.0.6",
+    "material-design-icons": "~2.2.0",
+    "angular-material-data-table": "~0.9.12",
+    "angular-motion": "~0.4.3",
+    "roboto-fontface": "~0.4.5"
   }
 }
