--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "roboto-fontface": "~0.4.5",
     "mdPickers": "~0.7.1",
     "moment": "~2.12.0",
-    "highcharts": "~4.2.3"
+    "highcharts": "~4.2.3",
+    "mdi": "^1.5.54"
   }
 }
